--- a/liam-dot-com/package.json
+++ b/liam-dot-com/package.json
@@ -12,10 +12,15 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@tailwindcss/forms": "^0.5.6",
     "autoprefixer": "^10.4.16",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "postcss": "^8.4.30",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
+    "sort-by": "^0.0.2",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
